fixed home scrolling on mobile devices and also make responsive on navbar

--- a/src/02_Components/01_NavBar/02_HeaderLinks/HeaderLinks.scss
+++ b/src/02_Components/01_NavBar/02_HeaderLinks/HeaderLinks.scss
@@ -75,7 +75,7 @@ html {
     @include width;
   }
 }
-@media screen and (max-width: 1000px) and (max-height: 250px) {
+@media screen and (max-width: 1000px) and (max-height: 450px) {
   @mixin navbar_toggler {
     flex-direction: row;
     width: 100%;
